# dicemind

./: README.md  flake.nix  rust-toolchain.toml
crates/dicemind/: Cargo.toml
crates/dicemind-cli/: Cargo.toml
crates/dicemind-cli/src/: command.rs  defaults.rs  main.rs  options.rs  simulate.rs
crates/dicemind-web/: Cargo.toml  index.html
crates/dicemind-web/src/: main.rs
crates/dicemind/examples/: discord.rs
crates/dicemind/src/: lib.rs  main.rs  minmax.rs  options.rs  parser.rs  simplify.rs  syntax.rs  visitor.rs
crates/dicemind/src/interpreter/: big.rs  config.rs  error.rs  fast.rs  mod.rs  naive.rs  roll.rs  roller.rs  verbose.rs
