[package]
name = "dicemind"
version = "0.0.0"
edition = "2021"

[dependencies]
smol_str = { version = "0.2.1", features = ["serde"] }
memoize = "0.4.2"
num = { version = "0.4.1", features = ["rand", "serde"] }
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
smallvec = { version = "1.13.1", features = ["serde"] }
thiserror = "1.0.56"
bitflags = "2.5.0"

[dev-dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
